Merge slurm runner and local runner + simplify the README